@@ -1,6 +1,9 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+06-Aug-2008 (Gnomi)
+  - (files.c) Rewrote copy/move_file due to copyright issues.
+
 26-Jul-2008 (Fuchur)
   - (object.c)
     remove tell_object_str(), and use tell_object() (#471)
